# PythonTools

./: .gitignore  README.md
BackOffice/: README.md  README2.md  api.py  pyproject.toml
BackOffice/backoffice/: __init__.py  api.py  commissions.py  cv.py  cv3.py  cv3Server.py  cv_team.py  factura.py  send_email.py  sunday_check.py
BackOffice/backoffice/teamcv/: banco_code.csv  cv_team.py  poderosas_code.csv  rockstar_code.csv  sona_code.csv  team_code.csv
BackOffice/tests/: __init__.py
Dermalife/: check_status_log.txt  create_disccount.py  listado_sku.csv  pyproject.toml
Dermalife/code_backup/: check_url.py
Dermalife/code_failure/: detailed_discount_result.csv  disccount2.py  discount4.py  discount5.py  discount6.py  discount7.py  discount_maker.py  disscount.py  disscount3.py  result.csv
Dermalife/dermalife/: __init__.py  discount8.py  listado_sku.csv  resultado2_sku.csv
Recompra/: pyproject.toml
Recompra_local/: pyproject.toml
Recompra_local/recompra_local/: check_recompra.py  check_recompra2.py
Transcript/: README.md  pyproject.toml
Transcript/tests/: __init__.py
Transcript/transcript/: __init__.py  main.py
YouTube/: pyproject.toml
YouTube/tests/: __init__.py
YouTube/youtube/: YouTube_to_MP3.py  main.py  mp3.py  transcribe_audio.py
hangman/: README.md  hanged_man.py  hangman_refactored.py  words.py  words_cache.csv
resize_image/: resize_image.sh
speedtest2/: README.md  speedtest.py  speedtest2.py
