[tool.poetry]
name = "recompra"
version = "0.1.0"
description = ""
authors = ["jduque1989 <67889006+jduque1989@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
